Missing JSONObject MimeType in REST API 91
Task-Url: https://github.com/gnl42/JiraConnector/issues/91